added sickass new nintendo start screen

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
   <!-- <img class="bg" src="./assets/images/bg-pic.jpeg" alt=""/> -->
   <head>
-    <title>Not So MegaMan</title>
+    <title>Gunslinger</title>
     <link rel="stylesheet" href="./assets/styles/application.css">
     <script type="application/javascript" src="./dist/main.js"></script>
   </head>
   <body>
+    <section id="game-system">
+      <img id="nes" src="./assets/images/nes-classic-edition-front.png" alt="" >
+      </section>
     <section id="welcome-page" class="hidden">
       <img id="instructions" src="./assets/images/wanted.jpeg" alt="" >
     </section>
